Fix align

--- a/assets/scss/_sidebar.scss
+++ b/assets/scss/_sidebar.scss
@@ -12,4 +12,8 @@
       height: 5rem;
     }
   }
+
+  .link > a {
+    padding-left: 16px;
+  }
 }
